* 0.8.2
   * Gameplay
      * Fixed duplicate rewards from pirate ship-stealing missions. (Sorry.)
   * Engine
      * Fixed a bug loading games with short (1-character) names.
      * Tweaked chances of seeing Spaceport Bar missions.
      * Updated German translation.
      * Fixed "configure" script when the system has a "cxsparse" library and no "csparse".

* 0.8.1
   * Gameplay
      * Lowered large ships' time constant (renamed from time dilation) by 50% of the deviation from 100%.
      * Tweaked Za'lek ships' stats and outfit slot behavior to match expectations.
   * Engine
      * Restored macOS support. (Catalina users will have to bypass Gatekeeper: See https://github.com/naev/naev/wiki/FAQ for details.)
      * Fixed a crash-loop when the "saves" folder gets populated by Steam data (or other files) and no Naev save files.
      * Fixed intermittent error messages about the "Lua Spawn script for faction 'Trader'".
      * Fixed rare/potential bugs in font and save-file code.
      * Fixed crash when navigating landing screens with the tab key.
      * Updated German translation.
      * Improved text in minor ways.

* 0.8.0
   * Gameplay
      * Overhaul of the interface to be more sleek and functional
         * Interface is much more slick
         * Dark theme to be more consistent with space
         * Font uses outlines to be more readable
      * New map overlay with adjustable opacity
      * Added rarity indicator to ships and outfits
      * Changed fonts
      * Indicate non-common NPC with exclamation marks
      * Added accessory slot and unique accessory outfits as mission rewards
      * Simple economy model implemented with map visualizations
      * Added travelling merchant who sells unique items
      * Made missiles and fighter bays reload while in space
      * Modified the balancing of missiles
      * Added asteroids and mining
      * Improved player GUI
      * Brushed GUI is now the default